checkout/k8s/checkout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: route256
  labels:
    app: checkout
spec:
  ports:
    - name: "grpc"
      protocol: TCP
      port: 30000
      targetPort: 30000
  selector:
    app: checkout
